액체 소화기 투척버튼추가, 열화상 카메라 출력 뷰 추가

--- a/mygcs2/src/main/res/layout/activity_main.xml
+++ b/mygcs2/src/main/res/layout/activity_main.xml
@@ -67,15 +67,40 @@
         app:layout_constraintVertical_bias="0.08" />
 
     <Button
+        android:id="@+id/btnSubOn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="480dp"
+        android:background="@drawable/mybutton_skyblue"
+        android:onClick="onSubOnBtnTap"
+        android:text="SubOn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnSubOff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="480dp"
+        android:background="@drawable/mybutton_skyblue"
+        android:onClick="onSubOffBtnTap"
+        android:text="SubOff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnSubOn" />
+
+    <Button
         android:id="@+id/btn_test2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:background="@drawable/mybutton_green"
         android:onClick="test_btn"
         android:text="테스트용"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.43" />
@@ -84,12 +109,13 @@
         android:id="@+id/btn_test4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:background="@drawable/mybutton_green"
         android:onClick="clear_overlay"
         android:text="오버레이 초기화"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.522" />
@@ -98,12 +124,12 @@
         android:id="@+id/btn_clear_recycle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
+        android:layout_marginStart="24dp"
         android:background="@drawable/mybutton_green"
         android:onClick="btnclearRecycler"
         android:text="clear"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_test2"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.43" />
 
